Fix screen adaptability issues
Polished the screen size adaptability so now the form changes its dimensions correctly according to screen size
Also made the owl a big screen only feature since it would be cramped in smaller to mid-sized screens

--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body {
     padding: 15px;
     height: 50vh;
     width: 30vw;
+    max-width: 700px;
     color: var(--orange);
     background-color: var(--light-yellow);
     margin: 0 auto;
@@ -125,7 +126,7 @@ button:hover {
     background: var(--light-yellow);
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1250px) {
     #loading-page {
         padding: 50px;
     }
@@ -133,8 +134,13 @@ button:hover {
         margin: 0 auto;
         transform: translate(0, 35vh);
         gap: 8px;
+        width: auto;
+        max-width: 500px;
     }
     #logo {
         transform: translate(50vw, 50vh) translate(-50%, -50%) scale(0.6); 
+    }
+    input {
+        font-size: 1rem;
     }
 }
